# intiControl

./: .gitignore  GenericHID.h  README.md  descriptors.c  descriptors.h  intiControl.files  intiControl.includes  intiController.c  intiController.cpp  intiController.h  makefile
Config/: AppConfig.h  LUFAConfig.h
config/: LUFAConfig.h
include/: control.h  datetime.h  debug.h  descriptors.h  eeprom.h  global.h  i2cmaster.h  led.h  local_maths.h  message.h  rtc.h  tkeeper.h  usb.h
intiUsbHost/: intiUsbHost.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  usb.cpp  usb.h
src/: control.cpp  datetime.cpp  debug.cpp  descriptors.c  eeprom.cpp  i2cmaster.cpp  led.cpp  rtc.cpp  timer.cpp  tkeeper.cpp  usb.cpp
tests/: CMakeLists.txt  intiTest.cpp  test_generic_hid_libusb.py
